     flowcell barcode is set is known in the npg_trackign database;
     runs are not going to be progressed is it's impossible to fetch LIMs data for a flowcell;
     both analysis and archival daemon to pass runfolder path to the
     pipeline script;
     if it is impossible to fetch LIMs data using the flowcell barcode,
     batch id will be passed to the pipeline script    

release 47.3
 - P4 can process nonconsented X and autosome human split, and separate Y chromosome data
 - tidy of conditions for selection of p4 processing, and new force_p4 flag to override them

release 47.2
 - don't process phix using the p4 pipeline

release 47.1
 - when using and copying an existing cache directory copy everything (instead of
   restricting to npg directory)
 - try to create samplesheet if it does not exist, even if copying cache

release 47.0
 - code moved to git repository

release 46.3
 - test fix

release 46.2
 - use samtools1.1 in seq_alignment P4 based analyses
 - externally specified webcache and samplesheet are copied to the default location
     inside the analysis folder
 - seqchksum primary data comparison between final product and post illumina2bam
 - run seqchksum and cluster count check at same time as post bam qc
 - tag list files creation:
     remove dedicated function
     call the code from illumina2bam function
     refactor into a stand-alone per-lane module
     create these files in the metadata cache directory
 - allow ref_match qc jobs to run 8 at a time (patched Bowtie ameliorates Lustre problem)
 - use subtemplate/library base templates rather than monolith ones for seq_alignment P4
 - do not run lane level pulldown_metrics job for a pool
 - extra seq_alignment check that run is compatible with available P4 pipelines
 - limit bam split by tag to lanes requested (fix)

release 46.1
 - for V4 HiSeq runs without a reference use bam_alignment.pl

release 46.0