@@ -87,7 +87,6 @@ test:
     - qc_verify_bam_id
     - qc_upstream_tags
   post_qc_review:
-    - spider
     - run_archival_in_progress
     - copy_interop_files_to_irods
     - archive_to_irods
