@@ -17,13 +17,13 @@ my $bin = $curdir . q[/bin];
 my $conf_path = $curdir . q{/data/config_files};
 
 my $analysis_runfolder_path = $util->analysis_runfolder_path();
-
 $util->set_rta_staging_analysis_area();
 
 # Script failures
 {
-  my $out = `perl $bin/npg_pipeline_PB_cal_bam --domain test --no_bsub  --run_folder 123456_IL2_1234 --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234 --id_run 1234 --function_order dodo`;
-  like($out, qr/Error submitting jobs: Can't locate object method "dodo" via package "npg_pipeline::pluggable::harold::PB_cal_bam"/, 'error when function does not exist');
+  my $out = `perl $bin/npg_pipeline_PB_cal_bam --no_bsub --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234 --function_order dodo`;
+  like($out, qr/Error submitting jobs: Can't locate object method "dodo" via package "npg_pipeline::pluggable::harold::PB_cal_bam"/,
+  'error when function does not exist');
 }
 
 # Script passes
@@ -31,7 +31,7 @@ $util->set_rta_staging_analysis_area();
   local $ENV{NPG_CACHED_SAMPLESHEET_FILE} = q{t/data/samplesheet_1234.csv};
   my $bustard_path = join q[/], $analysis_runfolder_path, q{Data/Intensities/Bustard1.5.1_09-07-2009_RTA};
   rename $bustard_path, join(q[/], $analysis_runfolder_path, 'moved');
-  lives_ok { diag qx{perl $bin/npg_pipeline_post_qc_review --domain test --conf_path $conf_path --id_run=1234 --no_folder_moves --runfolder_path $analysis_runfolder_path --bam_basecall_path $analysis_runfolder_path}; } q{ran bin/npg_pipeline_post_qc_review with id_run};
+  lives_ok { diag qx{perl $bin/npg_pipeline_post_qc_review --domain test --conf_path $conf_path --no_folder_moves --runfolder_path $analysis_runfolder_path --bam_basecall_path $analysis_runfolder_path}; } q{ran bin/npg_pipeline_post_qc_review};
   ok(!$CHILD_ERROR, qq{Return code of $CHILD_ERROR});
 }
 
